ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  tls:
    - hosts:
        - revuppaal.dk
      secretName: ssl
  rules:
  - host: revuppaal.dk
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-provider
            port:
              number: 4000
      - path: /exercise-provider
        pathType: Prefix
        backend:
          service:
            name: exercise-provider
            port:
              number: 2000
      - path: /data-access
        pathType: Prefix
        backend:
          service:
            name: data-access
            port:
              number: 5000
      - path: /exercise-verifier
        pathType: Prefix
        backend:
          service:
            name: exercise-verifier
            port:
              number: 10000
